@@ -69,7 +69,7 @@ public class GoraRecordWriter<K, T> extends RecordWriter<K, T> {
         store.flush();
       }
     }catch(Exception e){
-      LOG.warn("Exception at GoraRecordWriter.class while writing to datastore." + e.getMessage());
+      LOG.warn("Exception at GoraRecordWriter.class while writing to datastore. " + e.getMessage());
     }
   }
 }
